# vibe-pulse

./: .gitignore  DEMO.md  README.md  pyproject.toml
.vibe/: hooks.toml
data/: architecture.puml  dependencies.puml  france_tmax_7d.csv  heatwave.sqlite  paris_history.csv  paris_temps.csv  paris_temps.xlsx  report.md
examples/: train_digits.py  train_digits_torch.py  train_weather.py
pitch/: pitchdeck.html  pitchdeck_template.html
skills/canvas-to-cli/: SKILL.md
skills/ml-trainer/: SKILL.md
skills/work-weekly-brief/: SKILL.md
src/vibe_pulse/: arena.py  cli.py  diagram.py  plotter.py  stream.py
vibe_tools/: plot_metrics.py  secrets_guard.py  telemetry_hook.py
vibe_tools/prompts/: plot_metrics.md
