[project]
name = "vibe-pulse"
version = "0.1.0"
description = "Live ML training and data visualization in the terminal, built for Mistral Vibe"
requires-python = ">=3.10"
dependencies = [
    "plotille>=5.0",
    "plotext>=5.2",
    "scikit-learn>=1.3",
]

[project.scripts]
vibe-plot = "vibe_pulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_pulse"]
