[project]
name = "vibe-pulse"
version = "0.1.0"
description = "Live ML training and data visualization in the terminal, built for Mistral Vibe"
requires-python = ">=3.10"
dependencies = [
    "plotille>=5.0",
    "plotext>=5.2",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
aihub = [
    "torch>=2.2",
    "qai-hub>=0.20",
]

[project.scripts]
vibe-plot = "vibe_pulse.cli:main"
vibe-arena = "vibe_pulse.arena:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_pulse"]
